# symbolic

./: .clang-format  .craft.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .semgrepignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  run  version.sh  warden.toml
cabi/: Cargo.toml  Makefile  README.md  cbindgen.toml
cabi/c-tests/: demangle  demangle.c  object.c
cabi/include/: symbolic.h
cabi/py/: .gitignore  setup.py
cabi/py/symbolic/: common.py  (+6 more)
cabi/src/: common.rs  core.rs  debuginfo.rs  demangle.rs  lib.rs  minidump.rs  proguard.rs  sourcemap.rs  symcache.rs  unreal.rs  utils.rs
common/: Cargo.toml  README.md
common/src/: byteview.rs  cell.rs  errors.rs  fail.rs  heuristics.rs  lib.rs  macros.rs  path.rs  types.rs
common/tests/: byteview.rs
debuginfo/: Cargo.toml
debuginfo/src/: base.rs  breakpad.pest  breakpad.rs  dwarf.rs  elf.rs  features.rs  id.rs  lib.rs  mach.rs  macho.rs  object.rs  pdb.rs  pe.rs  private.rs  sourcebundle.rs  symbols.rs  wasm.rs
debuginfo/tests/: test_features.rs  test_objects.rs
demangle/: Cargo.toml  build.rs
demangle/src/: cppdemangle.cpp  lib.rs  swiftdemangle.cpp
demangle/tests/: basic.rs  cpp.rs  detection.rs  msvc.rs  objcpp.rs  swift.rs  test_cpp.rs
minidump/: Cargo.toml  Makefile  build.rs
minidump/cpp/: c_mapping.h  c_string.cpp  c_string.h  data_definitions.h  data_structures.cpp  data_structures.h  memstream.h  mmap_symbol_supplier.cpp  mmap_symbol_supplier.h  processor.cpp  processor.h  resolver.cpp  resolver.h
minidump/src/: cfi.rs  lib.rs  processor.rs  registers.rs  resolver.rs  utils.rs
minidump/tests/: test_cfi.rs  test_processor.rs
proguard/: Cargo.toml
proguard/src/: lib.rs  types.rs
sourcemap/: Cargo.toml
sourcemap/src/: lib.rs  types.rs
sources/: Cargo.toml
sources/src/: bundle.rs  debug_sources.rs  error.rs  lib.rs
symbolic/: Cargo.toml  README.md
symbolic-cabi/: Cargo.toml  Makefile  README.md
symbolic-cabi/c-tests/: common.c  demangle.c  object.c
symbolic-cabi/include/: symbolic.h
symbolic-cabi/src/: cfi.rs  common.rs  core.rs  debuginfo.rs  demangle.rs  lib.rs  minidump.rs  proguard.rs  smcache.rs  sourcemap.rs  sourcemapcache.rs  symcache.rs  unreal.rs  utils.rs
symbolic-cfi/: Cargo.toml
symbolic-cfi/src/: arm_exidx.rs  lib.rs
symbolic-cfi/tests/: test_cfi.rs
symbolic-common/: Cargo.toml
symbolic-common/src/: byteview.rs  cell.rs  heuristics.rs  lib.rs  path.rs  sourcelinks.rs  types.rs
symbolic-debuginfo/: Cargo.toml
symbolic-debuginfo/_fixtures/: Documents.pdbx  SourceLink.pdbx
symbolic-debuginfo/benches/: breakpad_parser.rs
symbolic-debuginfo/fuzz/: Cargo.toml
symbolic-debuginfo/src/: base.rs  bcsymbolmap.rs  breakpad.pest  breakpad.rs  dwarf.rs  elf.rs  function_builder.rs  function_stack.rs  js.rs  lib.rs  macho.rs  object.rs  pdb.rs  pe.rs  plist.rs  ppdb.rs  private.rs  shared.rs  sourcebundle.rs  variable.rs  wasm.rs
symbolic-debuginfo/tests/: test_objects.rs  test_pdb_srcsrv.rs  test_ppdb.rs  test_recursion_limits.rs  test_source_bundle.rs
symbolic-demangle/: Cargo.toml  build.rs
symbolic-demangle/src/: lib.rs  swiftdemangle.cpp
symbolic-demangle/tests/: test_cpp.rs  test_detection.rs  test_msvc.rs  test_objcpp.rs  test_swift.rs
symbolic-il2cpp/: Cargo.toml
symbolic-il2cpp/src/: lib.rs  line_mapping.rs  source_info.rs  usym.rs  usymlite.rs  utils.rs
symbolic-il2cpp/tests/: from_object.rs
symbolic-minidump/: Cargo.toml  build.rs
symbolic-minidump/benches/: from_minidump.rs  from_minidump_external.rs  nested_range_map.rs
symbolic-minidump/cpp/: data_definitions.h  data_structures.cpp  data_structures.h  mmap_symbol_supplier.cpp  processor.cpp  processor.h  symbolic_cfi_frame_info.cpp  symbolic_cfi_frame_info.h  symbolic_source_line_resolver.cpp  symbolic_source_line_resolver.h
symbolic-minidump/src/: cfi.rs  lib.rs  processor.rs
symbolic-minidump/tests/: test_cfi.rs  test_processor.rs
symbolic-ppdb/: Cargo.toml
symbolic-ppdb/fuzz/: Cargo.toml
symbolic-ppdb/src/: blob.rs  lib.rs  lookup.rs  metadata.rs  raw.rs  sequence_points.rs  tables.rs
symbolic-ppdb/tests/: test_caches.rs  test_ppdb.rs
symbolic-py/: Cargo.toml  pyproject.toml
symbolic-py/src/: lib.rs  proguard.rs
symbolic-py/tests/: conftest.py  test_proguard.py
symbolic-smcache/: Cargo.toml
symbolic-smcache/src/: lib.rs  name_resolver.rs  rslint.rs  scope_index.rs  scope_name.rs  source.rs
symbolic-smcache/tests/: integration.rs
symbolic-sourcemap/: Cargo.toml
symbolic-sourcemap/src/: lib.rs
symbolic-sourcemapcache/: Cargo.toml
symbolic-sourcemapcache/src/: lib.rs  lookup.rs  name_resolver.rs  raw.rs  scope_index.rs  source.rs  writer.rs
symbolic-sourcemapcache/tests/: integration.rs
symbolic-symcache/: Cargo.toml
symbolic-symcache/benches/: bench_writer.rs
symbolic-symcache/src/: cache.rs  compat.rs  error.rs  format.rs  lib.rs  lookup.rs  preamble.rs  raw.rs  writer.rs
symbolic-symcache/tests/: breakpad.rs  test_cache.rs  test_compat.rs  test_transformers.rs  test_writer.rs
symbolic-unreal/: Cargo.toml
symbolic-unreal/src/: container.rs  context.rs  error.rs  lib.rs  logs.rs  xml.rs
symbolic-unreal/tests/: test_unreal_crash_parse.rs
symbolic-unwind/: Cargo.toml  README.md
symbolic-unwind/src/: base.rs  evaluator.rs  lib.rs  memory.rs
symbolic-wasm/: Cargo.toml  build-npm.sh  smoke-test.mjs
symbolic-wasm/npm/: .gitignore  README.md  package-smoke.test.mjs  package.json  smoke-test.mjs
symbolic-wasm/src/: il2cpp.rs  lib.rs  utils.rs
symbolic-wasm/tests/: debuginfo.rs  il2cpp.rs
symbolic/src/: lib.rs
symcache/: Cargo.toml
symcache/benches/: bench_writer.rs
symcache/examples/: symcache-debug.rs  test.rs
symcache/src/: breakpad.rs  cache.rs  dwarf.rs  error.rs  format.rs  heuristics.rs  lib.rs  read.rs  types.rs  utils.rs  writer.rs
symcache/tests/: symcache.rs  test_cache.rs  test_compat.rs  test_writer.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
unreal/: Cargo.toml
unreal/src/: container.rs  context.rs  error.rs  lib.rs  logs.rs  unreal_engine_crash.rs
(+605 files in other folders)
