[package]
name = "symbolic-cabi"
version = "5.2.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
C interface wrapper for symbolic, a library to symbolicate and process stack
traces from native applications, minidumps, minified JavaScripts or ProGuard
optimized Android apps.
"""

[lib]
name = "symbolic"
crate-type = ["cdylib"]

[workspace]

[profile.release]
debug = true
lto = true

[dependencies]
uuid = "0.7.1"
failure = "0.1.2"
failure_derive = "0.1.2"
symbolic = { version = "5.2.0", path = "..", features = ["debuginfo", "demangle", "minidump", "proguard", "sourcemap", "symcache"] }
