[package]
name = "symbolic-cabi"
version = "5.7.8"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
C interface wrapper for symbolic, a library to symbolicate and process stack
traces from native applications, minidumps, minified JavaScripts or ProGuard
optimized Android apps.
"""
edition = "2018"

[lib]
name = "symbolic"
crate-type = ["cdylib"]

[workspace]

[profile.release]
debug = true
lto = true

[dependencies]
serde = {version = "1.0.80", features = ["derive"]}
serde_json = "1.0.33"
uuid = "0.7.1"
failure = "0.1.3"
apple-crash-report-parser = { version = "0.1.1", features = ["with_serde"] }
symbolic = { version = "5.7.8", path = "..", features = ["debuginfo", "demangle", "minidump", "proguard", "sourcemap", "symcache", "unreal"] }
