[package]
name = "symbolic-cabi"
version = "7.3.6"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
C interface wrapper for symbolic, a library to symbolicate and process stack
traces from native applications, minidumps, minified JavaScripts or ProGuard
optimized Android apps.
"""
edition = "2018"

[lib]
name = "symbolic"
crate-type = ["cdylib"]

[workspace]

[profile.release]
debug = true
lto = true

[dependencies]
serde_json = "1.0.40"
failure = "0.1.5"
apple-crash-report-parser = { version = "0.4.0", features = ["with_serde"] }
symbolic = { version = "7.3.6", path = "..", features = ["debuginfo", "demangle", "minidump", "proguard", "sourcemap", "symcache", "unreal-serde"] }
proguard = { version = "4.0.1", features = ["uuid"] }
