[package]
name = "symbolic-common"
version = "5.7.8"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-common"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Common types and utilities for symbolic, a library to symbolicate and process
stack traces from native applications, minidumps, minified JavaScripts or
ProGuard optimized Android apps.
"""
edition = "2018"

[dependencies]
error-chain = "0.12.0"
#gimli = { version = "0.16.1", optional = true }
gimli = { git = "https://github.com/gimli-rs/gimli", rev = "6de997b41f9629326cf1885cf1e63582ddef6c21", optional = true }
goblin = { version = "0.0.19", optional = true }
memmap = "0.7.0"
owning_ref = "0.4.0"
serde = { version = "1.0.80", optional = true }
serde_plain = { version = "0.3.0", optional = true }
sourcemap = { version = "2.2.1", optional = true }
failure = "0.1.3"
debugid = "0.3.1"

[features]
default = []
with_dwarf = ["gimli"]
with_objects = ["goblin"]
with_serde = ["serde", "serde_plain", "debugid/with_serde"]
with_sourcemaps = ["sourcemap"]
