[package]
name = "symbolic-common"
version = "7.0.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-common"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
Common types and utilities for symbolic, a library to symbolicate and process
stack traces from native applications, minidumps, minified JavaScripts or
ProGuard optimized Android apps.
"""
edition = "2018"

[dependencies]
debugid = "0.5.3"
failure = "0.1.5"
memmap = "0.7.0"
stable_deref_trait = "1.1.1"
serde_ = { package = "serde", version = "1.0.88", optional = true }
uuid = "0.7.4"

[features]
default = []
serde = ["serde_", "debugid/serde"]
