[package]
name = "symbolic-debuginfo"
version = "7.0.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-debuginfo"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to inspect and load DWARF debugging information from binaries, such
as Mach-O or ELF.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
dmsort = "1.0.0"
failure = "0.1.5"
fallible-iterator = "0.2.0"
flate2 = { version = "1.0.9", features = ["rust_backend"], default-features = false }
gimli = { git = "https://github.com/jan-auer/gimli", rev = "bf8ea0f0079505681c360d3a55d0ac1e9b498df3", features = ["read", "std"], default-features = false }
goblin = { git = "https://github.com/m4b/goblin", rev = "cfa098a528409847c568216e04f764b792f8425a" }
lazycell = "1.2.1"
lazy_static = "1.3.0"
pdb = { git = "https://github.com/jan-auer/pdb", rev = "6518a17aff69ed26375cf3358632abbd32073931" }
parking_lot = "0.8.0"
pest = "2.1.1"
pest_derive = "2.1.0"
regex = "1.1.9"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
smallvec = "0.6.10"
symbolic-common = { version = "7.0.0", path = "../common" }
zip = "0.5.2"
parity-wasm = "0.41.0"

[dev-dependencies]
insta = "0.8.1"
