[package]
name = "symbolic-debuginfo"
version = "7.1.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-debuginfo"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to inspect and load DWARF debugging information from binaries, such
as Mach-O or ELF.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
dmsort = "1.0.0"
failure = "0.1.5"
fallible-iterator = "0.2.0"
flate2 = { version = "1.0.13", features = ["rust_backend"], default-features = false }
gimli = { version = "0.20.0", features = ["read", "std"], default-features = false }
goblin = "0.2.1"
lazycell = "1.2.1"
lazy_static = "1.3.0"
pdb = { git = "https://github.com/willglynn/pdb", rev = "7176d3733a7cefce43e48ad634f387d82f38494a" }
parking_lot = "0.8.0"
pest = "2.1.1"
pest_derive = "2.1.0"
regex = "1.1.9"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
smallvec = "0.6.10"
symbolic-common = { version = "7.1.0", path = "../common" }
zip = "0.5.2"

[dev-dependencies]
insta = "0.8.1"
