[package]
name = "symbolic-debuginfo"
version = "7.3.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-debuginfo"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to inspect and load DWARF debugging information from binaries, such
as Mach-O or ELF.
"""
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
dmsort = "1.0.0"
failure = "0.1.5"
fallible-iterator = "0.2.0"
flate2 = { version = "1.0.13", features = ["rust_backend"], default-features = false }
gimli = { version = "0.21.0", features = ["read", "std"], default-features = false }
goblin = "0.2.3"
lazycell = "1.2.1"
lazy_static = "1.4.0"
pdb = "0.6.0"
parking_lot = "0.10.0"
pest = "2.1.1"
pest_derive = "2.1.0"
regex = "1.3.5"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
smallvec = "1.2.0"
symbolic-common = { version = "7.3.2", path = "../common" }
zip = "0.5.2"

[dev-dependencies]
insta = "0.15.0"
symbolic-testutils = { path = "../testutils" }
