[package]
name = "symbolic-demangle"
version = "7.3.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-demangle"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to demangle symbols from various languages and compilers.
"""
build = "build.rs"
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
cpp_demangle = { git = "https://github.com/gimli-rs/cpp_demangle", rev = "1ad5008455d971ad8f74c1fa4a72f9b5b3a3b0dc" }
msvc-demangler = "0.8.0"
rustc-demangle = "0.1.16"
symbolic-common = { version = "7.3.0", path = "../common" }

[build-dependencies]
cc = "1.0.50"
