[package]
name = "symbolic-demangle"
version = "7.5.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-demangle"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
A library to demangle symbols from various languages and compilers.
"""
build = "build.rs"
edition = "2018"

exclude = [
    "tests/**/*",
]

[dependencies]
cpp_demangle = { git = "https://github.com/Swatinem/cpp_demangle", branch = "fix/increase-recursions" }
msvc-demangler = "0.8.0"
rustc-demangle = "0.1.16"
symbolic-common = { version = "7.5.0", path = "../common" }

[build-dependencies]
cc = "1.0.50"

[badges]
travis-ci = { repository = "getsentry/symbolic", branch = "master" }
