[package]
name = "symbolic-minidump"
version = "5.8.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-minidump"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process and inspect Minidump crash reports
"""
build = "build.rs"
edition = "2018"

[dependencies]
failure = "0.1.5"
lazy_static = "1.2.0"
regex = "1.1.0"
symbolic-common = { version = "5.8.2", path = "../common" }
symbolic-debuginfo = { version = "5.8.2", path = "../debuginfo" }

[build-dependencies]
cc = { version = "1.0.29", features = ["parallel"] }

[dev-dependencies]
symbolic-testutils = { version = "5.8.2", path = "../testutils" }

[features]
default = []
