[package]
name = "symbolic-minidump"
version = "5.8.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-minidump"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process and inspect Minidump crash reports
"""
build = "build.rs"
edition = "2018"

exclude = [
    "tests/**/*",
    "third_party/**/*",
]

[dependencies]
failure = "0.1.5"
lazy_static = "1.3.0"
regex = "1.1.2"
serde = { version = "1.0.89", optional = true }
symbolic-common = { version = "5.8.2", path = "../common" }
symbolic-debuginfo = { version = "5.8.2", path = "../debuginfo" }

[build-dependencies]
cc = { version = "1.0.31", features = ["parallel"] }

[dev-dependencies]
insta = "0.7.1"
