[package]
name = "symbolic-proguard"
version = "7.5.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-proguard"
keywords = ["proguard", "retrace", "R8"]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process ProGuard and R8 mapping files and symbolicate frames from
optimized applications.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
proguard = { version = "4.0.1", features = ["uuid"] }
symbolic-common = { version = "7.5.0", path = "../common" }
