[package]
name = "symbolic-sourcemap"
version = "5.1.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-sourcemap"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process JavaScript sourcemaps and resolve symbols in minified
source code or stack traces.
"""

[dependencies]
failure = "0.1.2"
sourcemap = "2.2.1"
symbolic-common = { version = "5.1.2", path = "../common", features = ["with_sourcemaps"] }
