[package]
name = "symbolic-cabi"
version = "12.4.1"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
C interface wrapper for symbolic, a library to symbolicate and process stack
traces from native applications, minidumps, minified JavaScript or ProGuard
optimized Android apps.
"""
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proguard = { version = "5.1.0", features = ["uuid"] }
sourcemap = "7.0.0"
symbolic = { version = "12.4.1", path = "../symbolic", features = ["cfi", "debuginfo", "sourcemapcache", "symcache"] }
tempfile = "3.4.0"
