[package]
name = "symbolic-cfi"
version = "12.9.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-cfi"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process call frame information
"""
edition = "2021"

[dependencies]
symbolic-common = { workspace = true }
symbolic-debuginfo = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
symbolic-testutils = { workspace = true }
similar-asserts = { workspace = true }
