[package]
name = "symbolic-cfi"
version = "12.12.2"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-cfi"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to process call frame information
"""
edition = "2021"

[dependencies]
symbolic-common = { version = "12.12.2", path = "../symbolic-common" }
symbolic-debuginfo = { version = "12.12.2", path = "../symbolic-debuginfo" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
similar-asserts = { workspace = true }
symbolic-testutils = { path = "../symbolic-testutils" }
