[package]
name = "symbolic-common"
version = "9.0.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-common"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
Common types and utilities for symbolic, a library to symbolicate and process
stack traces from native applications, minidumps, minified JavaScripts or
ProGuard optimized Android apps.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
debugid = "0.8.0"
memmap2 = "0.5.0"
stable_deref_trait = "1.1.1"
serde_ = { package = "serde", version = "1.0.88", optional = true, features = ["derive"] }
uuid = "1.0.0"

[dev-dependencies]
symbolic-testutils = { path = "../symbolic-testutils" }
tempfile = "3.1.0"
similar-asserts = "1.0.0"

[features]
serde = ["serde_", "debugid/serde"]

[badges]
travis-ci = { repository = "getsentry/symbolic", branch = "master" }
