[package]
name = "symbolic-common"
version = "12.4.1"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-common"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
readme = "README.md"
description = """
Common types and utilities for symbolic, a library to symbolicate and process
stack traces from native applications, minidumps, minified JavaScripts or
ProGuard optimized Android apps.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["dep:serde", "debugid/serde"]

[dependencies]
debugid = "0.8.0"
memmap2 = "0.8.0"
stable_deref_trait = "1.2.0"
serde = { version = "1.0.154", optional = true, features = ["derive"] }
uuid = "1.3.0"

[dev-dependencies]
symbolic-testutils = { path = "../symbolic-testutils" }
tempfile = "3.4.0"
similar-asserts = "1.4.2"
