[package]
name = "symbolic-debuginfo"
version = "9.0.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-debuginfo"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to inspect and load DWARF debugging information from binaries, such
as Mach-O or ELF.
"""
edition = "2018"

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["breakpad", "elf", "macho", "ms", "sourcebundle", "wasm"]
# Breakpad text format parsing and processing
breakpad = ["nom", "nom-supreme", "regex"]
# DWARF processing.
dwarf = ["gimli", "lazycell"]
# ELF reading
elf = [
    "dwarf",
    "flate2",
    "goblin/endian_fd",
    "goblin/elf32",
    "goblin/elf64",
    "goblin/std",
    "scroll",
]
# Mach-o processing
macho = [
    "dwarf",
    "elementtree",
    "goblin/mach32",
    "goblin/mach64",
    "goblin/std",
    "scroll",
    "smallvec",
]
# PDB/PE processing
ms = [
    "elsa",
    "goblin/pe32",
    "goblin/pe64",
    "goblin/std",
    "lazycell",
    "parking_lot",
    "pdb-addr2line",
    "scroll",
    "smallvec",
]
# Source bundle creation
sourcebundle = [
    "lazy_static",
    "lazycell",
    "parking_lot",
    "regex",
    "serde_json",
    "zip",
]
# WASM processing
wasm = ["bitvec", "dwarf", "wasmparser"]

[dependencies]
bitvec = { version = "1.0.0", optional = true, features = ["alloc"] }
dmsort = "1.0.1"
elementtree = { version = "0.7.0", optional = true }
elsa = { version = "1.4.0", optional = true }
fallible-iterator = "0.2.0"
flate2 = { version = "1.0.13", optional = true, default-features = false, features = [
    "rust_backend",
] }
gimli = { version = "0.26.1", optional = true, default-features = false, features = [
    "read",
    "std",
] }
goblin = { version = "0.5.1", optional = true, default-features = false }
lazy_static = { version = "1.4.0", optional = true }
lazycell = { version = "1.2.1", optional = true }
nom = { version = "7.0.0", optional = true }
nom-supreme = { version = "0.8.0", optional = true }
parking_lot = { version = "0.12.0", optional = true }
pdb-addr2line = { version = "0.10.2", optional = true }
regex = { version = "1.3.5", optional = true }
# keep this in sync with whatever version `goblin` uses
scroll = { version = "0.11", optional = true }
serde = { version = "1.0.94", features = ["derive"] }
serde_json = { version = "1.0.40", optional = true }
smallvec = { version = "1.2.0", optional = true }
symbolic-common = { version = "9.0.0", path = "../symbolic-common" }
thiserror = "1.0.20"
wasmparser = { version = "0.85.0", optional = true }
zip = { version = "0.6.2", optional = true, default-features = false, features = [
    "deflate",
] }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
insta = "1.3.0"
tempfile = "3.1.0"
similar-asserts = "1.0.0"
symbolic-testutils = { path = "../symbolic-testutils" }

[[bench]]
name = "breakpad_parser"
harness = false
required-features = ["breakpad"]
