[package]
name = "symbolic-debuginfo"
version = "12.7.0"
license = "MIT"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Jan Michael Auer <mail@jauer.org>",
]
documentation = "https://docs.rs/symbolic-debuginfo"
homepage = "https://github.com/getsentry/symbolic"
repository = "https://github.com/getsentry/symbolic"
description = """
A library to inspect and load DWARF debugging information from binaries, such
as Mach-O or ELF.
"""
edition = "2021"

exclude = ["tests/**/*"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["breakpad", "elf", "macho", "ms", "ppdb", "sourcebundle", "js", "wasm"]
# Breakpad text format parsing and processing
breakpad = ["nom", "nom-supreme", "regex"]
# DWARF processing.
dwarf = ["gimli", "once_cell"]
# ELF reading
elf = [
    "dwarf",
    "flate2",
    "goblin/endian_fd",
    "goblin/elf32",
    "goblin/elf64",
    "goblin/std",
    "scroll",
]
# Mach-o processing
macho = [
    "dwarf",
    "elementtree",
    "goblin/mach32",
    "goblin/mach64",
    "goblin/std",
    "scroll",
    "smallvec",
]
# PDB/PE processing
ms = [
    "elsa",
    "flate2",
    "goblin/pe32",
    "goblin/pe64",
    "goblin/std",
    "once_cell",
    "parking_lot",
    "pdb-addr2line",
    "scroll",
    "smallvec",
]
ppdb = [
    "symbolic-ppdb"
]
# Source bundle creation
sourcebundle = [
    "lazy_static",
    "once_cell",
    "parking_lot",
    "regex",
    "serde_json",
    "zip",
    "js",
    "debugid/serde",
]
# JavaScript stuff
js = []
# WASM processing
wasm = ["dwarf", "wasmparser"]

[dependencies]
dmsort = "1.0.2"
debugid = { version = "0.8.0" }
elementtree = { version = "1.2.3", optional = true }
elsa = { version = "1.8.0", optional = true }
fallible-iterator = "0.3.0"
flate2 = { version = "1.0.25", optional = true, default-features = false, features = ["rust_backend"] }
gimli = { version = "0.28.1", optional = true, default-features = false, features = ["read", "std", "fallible-iterator"] }
goblin = { version = "0.7.1", optional = true, default-features = false }
lazy_static = { version = "1.4.0", optional = true }
once_cell = { version = "1.17.1", optional = true }
nom = { version = "7.1.3", optional = true }
nom-supreme = { version = "0.8.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
pdb-addr2line = { version = "0.10.4", optional = true }
regex = { version = "1.7.1", optional = true }
# keep this in sync with whatever version `goblin` uses
scroll = { version = "0.11.0", optional = true }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", optional = true }
smallvec = { version = "1.10.0", optional = true }
symbolic-common = { version = "12.7.0", path = "../symbolic-common" }
symbolic-ppdb = { version = "12.7.0", path = "../symbolic-ppdb", optional = true }
thiserror = "1.0.39"
wasmparser = { version = "0.118.0", optional = true }
zip = { version = "0.6.4", optional = true, default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.28.0", features = ["yaml"] }
tempfile = "3.4.0"
similar-asserts = "1.4.2"
symbolic-testutils = { path = "../symbolic-testutils" }

[[bench]]
name = "breakpad_parser"
harness = false
required-features = ["breakpad"]
